--- a/package.json
+++ b/package.json
@@ -21,7 +21,12 @@
         "vue": "^3.4.0"
     },
     "dependencies": {
+        "@types/pdfmake": "^0.2.11",
         "chart.js": "^4.4.9",
-        "vue-chartjs": "^5.3.2"
+        "file-saver": "^2.0.5",
+        "jquery": "^3.7.1",
+        "pdfmake": "^0.2.20",
+        "vue-chartjs": "^5.3.2",
+        "xlsx": "^0.18.5"
     }
 }
